# miniAero

./: README.md
.github/workflows/: linux-mpi-buildonly.yaml  linux-mpi.yaml  linux.yaml
kokkos/: CMakeLists.txt  Faces.h  MathToolsDevice.h  Parallel3DMesh.h  README  Roe_Flux.h  Tangent_BC.h  TimeSolverExplicitRK4.h  setupmesh.0
kokkos/tests/: run_tests.sh
kokkos/tests/3D_Sod_Parallel/: 3d_sod_parallel_test.sh
kokkos/tests/FlatPlate_Parallel/: flatplate_parallel_test.sh
kokkos/tests/Ramp_Parallel/: diff.6.txt  ramp_parallel_test.sh
kokkos/tests/tools/: numeric_text_diff
